# referencer

./: .bzrignore  .gitignore  AUTHORS  BibData.C  BibData.h  BibUtils.C  BibUtils.h  ChangeLog  Changelog  CrossRefParser.h  Document.C  Document.h  DocumentList.C  DocumentList.h  DocumentProperties.C  DocumentProperties.h  Doxyfile  LibraryParser.h  Makefile  Makefile.am  Preferences.C  Preferences.h  README  TODO  TagList.C  TagList.h  TagWindow.C  TagWindow.h  Transfer.C  Utility.C  Utility.h  autogen.sh  configure.ac  configure.in  devconfigure  documentproperties.glade  foo  introduction.html  main.C  main.C.old  (+4 more)
data/: Makefile.am  crossref.glade  crossref.ui  documentproperties.glade  documentproperties.ui  introduction.html  libraryfolder.glade  libraryfolder.ui  main.css  preferences.glade  preferences.ui  referencer.desktop.in.in  referencer.xml  search.glade  search.ui
devhelp/: Makefile.am  referencer-plugins.omf.in
devhelp/C/: referencer-plugins.xml
devhelp/de/: de.po
doc/: Doxyfile
help/: ChangeLog  Makefile.am  referencer.omf.in  referencer.pot
help/C/: legal.xml  referencer.xml
help/de/: de.po  referencer.xml
libbibutils/: Makefile  Makefile.am  bibtexin.c  bibtexout.c  bibtexout.h  bibtypes.c  bibutils.c  bibutils.h  copacin.c  endin.c  endout.c  endtypes.c  endxmlin.c  endxmlin.h  entities.c  fields.c  fields.h  isiin.c  isiout.c  isiout.h  isitypes.c  latex.c  lists.c  lists.h  medin.c  modsin.c  modsout.c  modsout.h  name.c  newstr.c  newstr.h  newstr_conv.c  risin.c  risout.c  ristypes.c  wordout.c  wordout.h  xml.c
libsexymm/private/: icon-entry_p.h
plugins/: Makefile.am  README  ads.py  bibtex-test.py  dblp.py  dummy.py_  expj.py  export_bibtex_entries.py  genkey.py  google-books.py  isi-plugin.py  lyx.py  pubmed.py  search-test.py
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  referencer.pot  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  zh_CN.po  zh_TW.po
src/: ArxivPlugin.C  ArxivPlugin.h  BibData.C  BibData.h  BibUtils.C  BibUtils.h  CaseFoldCompare.h  CrossRefParser.h  CrossRefPlugin.C  CrossRefPlugin.h  Document.C  Document.h  DocumentList.C  DocumentList.h  DocumentProperties.C  DocumentProperties.h  DocumentTypes.C  DocumentTypes.h  DocumentView.C  DocumentView.h  EntryMultiCompletion.C  EntryMultiCompletion.h  Library.C  Library.h  LibraryParser.h  Linker.C  Linker.h  Makefile.am  Plugin.h  PluginManager.C  PluginManager.h  Preferences.C  Preferences.h  Progress.C  Progress.h  ProgressDialog.C  ProgressDialog.h  PythonDocument.C  PythonDocument.h  PythonPlugin.C  (+24 more)
www/: contact.html  development.html  faq.html  index.html  introduction.html  main.css  plugins.lyx  upload.sh
