noinst_LIBRARIES = libbibutils.a

SIMPLE_SOURCES =	\
	is_ws.c		\
	is_ws.h		\
	strsearch.c	\
	strsearch.h	\
	charsets.c	\
	charsets.h

NEWSTR_SOURCES =	\
	newstr.c	\
	newstr.h	\
	newstr_conv.c	\
	newstr_conv.h	\
	entities.c	\
	entities.h	\
	latex.c		\
	latex.h		\
	utf8.c		\
	utf8.h

CONTAIN_SOURCES =	\
	fields.c	\
	fields.h	\
	lists.c		\
	lists.h		\
	xml.c		\
	xml.h		\
	xml_encoding.c	\
	xml_encoding.h

INPUT_SOURCES =		\
	bibtexin.c	\
	bibtexin.h	\
	bibtypes.c	\
	bibtexout.c	\
	bibtexout.h	\
	copacin.c	\
	copacin.h	\
	copactypes.c	\
	endin.c		\
	endin.h		\
	endtypes.c	\
	endout.c	\
	endout.h	\
	endxmlin.c \
	endxmlin.h \
	isiin.c		\
	isiin.h		\
	isitypes.c	\
	medin.c		\
	medin.h		\
	modsin.c	\
	modsin.h	\
	risin.c		\
	risin.h		\
	ristypes.c	\
	risout.c	\
	risout.h	\
	reftypes.c	\
	reftypes.h

OUTPUT_SOURCES =	\
	isiout.c \
	isiout.h \
	modsout.c	\
	modsout.h \
	wordout.c \
	wordout.h

libbibutils_a_SOURCES = 	\
	$(SIMPLE_SOURCES)	\
	$(NEWSTR_SOURCES)	\
	$(CONTAIN_SOURCES)	\
	$(INPUT_SOURCES)	\
	$(OUTPUT_SOURCES)	\
	name.c			\
	name.h			\
	title.c			\
	title.h			\
	bibl.c			\
	bibl.h			\
	serialno.c		\
	serialno.h		\
	bibutils.c		\
	bibutils.h
